<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/sign_up_imageView"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginBottom="@dimen/common_margin"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_nick_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_nick_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_layout"
        android:ems="13"
        android:fontFamily="casual"
        android:hint="@string/enter_your_nickname"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/common_padding"
        android:textAlignment="center"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/sign_up_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/edit_text_layout"
        android:ems="13"
        android:fontFamily="casual"
        android:hint="@string/enter_your_password"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/common_padding"
        android:textAlignment="center"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_nick_text"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/sign_up_toDo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/edit_text_layout"
        android:ems="13"
        android:fontFamily="casual"
        android:hint="@string/what_i_do"
        android:inputType="text"
        android:padding="@dimen/common_padding"
        android:textAlignment="center"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sign_up_signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:backgroundTint="@color/blue"
        android:text="@string/sign_up"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_toDo_text"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>